crates/lang/macro/tests/ui/fail/H-02-invalid-as-dependency.stderr
error: expected a bool literal for `compile_as_dependency` ink! configuration argument
 --> $DIR/H-02-invalid-as-dependency.rs:3:17
  |
3 | #[ink::contract(compile_as_dependency = "yes")]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
